<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/safety_right_menu_base_layout_bg" >

    <RelativeLayout
        android:id="@id/sliding_menu_user_info"
        android:layout_width="wrap_content"
        android:layout_height="56.0dip"
        android:background="@drawable/header_bg"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@id/sliding_menu_icon_profile"
            android:layout_width="50.0dip"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:contentDescription="@android:string/untitled"
            android:paddingLeft="5.0dip"
            android:paddingRight="5.0dip"
            android:scaleType="fitCenter"
            android:src="@drawable/header" />

        <TextView
            android:id="@id/sliding_menu_tv_my_name"
            style="@style/SlidingMenu.TextView.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3.0dip"
            android:layout_marginLeft="3.0dip"
            android:layout_marginRight="3.0dip"
            android:layout_marginTop="3.0dip"
            android:layout_toRightOf="@id/sliding_menu_icon_profile"
            android:text="@string/safety_my_account" />

        <TextView
            android:id="@id/sliding_menu_tv_login_status"
            style="@style/SlidingMenu.TextView.SubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sliding_menu_tv_my_name"
            android:layout_marginLeft="3.0dip"
            android:layout_marginRight="3.0dip"
            android:layout_toRightOf="@id/sliding_menu_icon_profile"
            android:text="@string/right_menu_login_status_text" />
    </RelativeLayout>

    <LinearLayout
        android:id="@id/layout_sliding_menu_other_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/night_biz_pc_zone_bg"
        android:orientation="vertical" 
        android:layout_below="@id/sliding_menu_user_info">

        <GridView
            android:id="@id/gv_sliding_menu_other_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:listSelector="@drawable/night_base_drawable_view_bg"
            android:numColumns="2" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_sliding_menu_other_content" 
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <LinearLayout android:id="@id/layout_sliding_menu_tv_setting_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_right_menu"
                android:clickable="true"
                android:focusable="true" >

                <TextView
                    android:id="@id/sliding_menu_tv_setting_icon"
                    style="@style/SlidingMenu.TextView.ItemTitle"
                    android:layout_width="wrap_content"
                    android:drawableLeft="@drawable/biz_pc_list_setting_icon"
                    android:text="@string/safety_right_menu_setting" />
            </LinearLayout>

            <View style="@style/SlidingMenu.View.SplitLine" />

            <LinearLayout android:id="@id/layout_sliding_menu_tv_search_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_right_menu"
                android:clickable="true"
                android:focusable="true" >

                <TextView
                    android:id="@id/sliding_menu_tv_search_icon"
                    style="@style/SlidingMenu.TextView.ItemTitle"
                    android:layout_width="wrap_content"
                    android:drawableLeft="@drawable/biz_pc_list_search_icon"
                    android:text="@string/right_menu_search_text" />
            </LinearLayout>

            <View style="@style/SlidingMenu.View.SplitLine" />

            <LinearLayout android:id="@id/layout_sliding_menu_tv_clear_data_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_right_menu"
                android:clickable="true"
                android:focusable="true" >

                <TextView
                    android:id="@id/sliding_menu_tv_clear_data_icon"
                    style="@style/SlidingMenu.TextView.ItemTitle"
                    android:layout_width="wrap_content"
                    android:drawableLeft="@drawable/dialog_icon_recycle"
                    android:text="@string/right_menu_clear_all_data_text" />
            </LinearLayout>

            <View style="@style/SlidingMenu.View.SplitLine" />

            <LinearLayout android:id="@id/layout_sliding_menu_tv_change_bg_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_right_menu"
                android:clickable="true"
                android:focusable="true" >

                <TextView
                    android:id="@id/sliding_menu_tv_change_bg_icon"
                    style="@style/SlidingMenu.TextView.ItemTitle"
                    android:layout_width="wrap_content"
                    android:drawableLeft="@drawable/night_biz_navigation_tab_pics_normal"
                    android:text="@string/right_menu_chanage_bg_text" />
            </LinearLayout>

            <View style="@style/SlidingMenu.View.SplitLine" />

            <LinearLayout android:id="@id/layout_sliding_menu_tv_night_state_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_right_menu"
                android:clickable="true"
                android:focusable="true" >

                <TextView
                    android:id="@id/sliding_menu_tv_night_state_icon"
                    style="@style/SlidingMenu.TextView.ItemTitle"
                    android:layout_width="wrap_content"
                    android:drawableLeft="@drawable/biz_pc_list_theme_icon_night"
                    android:text="@string/right_menu_night_state" />
            </LinearLayout>

            <View style="@style/SlidingMenu.View.SplitLine" />

            <LinearLayout android:id="@id/layout_sliding_menu_tv_exit_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_right_menu"
                android:clickable="true"
                android:focusable="true" >

                <TextView
                    android:id="@id/sliding_menu_tv_exit_icon"
                    style="@style/SlidingMenu.TextView.ItemTitle"
                    android:layout_width="wrap_content"
                    android:drawableLeft="@drawable/night_biz_navigation_tab_vote_normal"
                    android:text="@string/right_menu_exit_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:layout_below="@id/sliding_menu_user_info"
        android:background="@drawable/top_shadow" />
</RelativeLayout>