<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="66dp"
    android:layout_gravity="left"
    android:orientation="horizontal"
    android:padding="4dp" >

    <TextView
        android:id="@id/tv_viewpager_content_index"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="6dp"
        android:background="@drawable/btn_radio_off_holo_dark"
        android:gravity="center" />

    <TextView
        android:id="@id/tv_viewpager_content"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:gravity="left|center_vertical"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:textColor="@color/safety_third_title_color" />

    <RadioGroup
        android:id="@id/rg_viewpager_content_score"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@id/rb_viewpager_content_score_zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_regular_scoremark"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_fraction_text" />

        <RadioButton
            android:id="@id/rb_viewpager_content_score_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@drawable/selector_regular_scoremark"
            android:button="@null"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_fraction_text" />

        <RadioButton
            android:id="@id/rb_viewpager_content_score_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@drawable/selector_regular_scoremark"
            android:button="@null"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_fraction_text" />

        <RadioButton
            android:id="@id/rb_viewpager_content_score_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@drawable/selector_regular_scoremark"
            android:button="@null"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven_fraction_text" />
    </RadioGroup>

</LinearLayout>