<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@id/layout_search_data_process"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginLeft="580dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/chat_sendout"
        android:paddingBottom="6dp"
        android:paddingLeft="4dp"
        android:paddingRight="14dp"
        android:paddingTop="4dp" >

        <ImageView
            android:id="@id/iv_image_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/wlbackground01_mobile" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" >

            <Button
                android:id="@id/btn_search_data_finished"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selector_right_menu_search_btn"
                android:text="@string/right_menu_search_finished_text"
                android:textSize="14sp" />

            <Button
                android:id="@id/btn_search_data_unfinished"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                 android:layout_marginLeft="4dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selector_right_menu_search_btn"
                android:text="@string/right_menu_search_unfinished_text"
                android:textSize="14sp" />

            <Button
                android:id="@id/btn_search_data_result"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                 android:layout_marginLeft="4dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selector_right_menu_search_btn"
                android:text="@string/btn_search_data_result_text"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>