<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg_action_bar_flight_top" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <ImageView
                android:id="@id/iv_head_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/default_user_ico" />

            <TextView
                android:id="@id/tv_my_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/iv_head_image"
                android:text="@string/safety_my_account"
                android:textColor="@color/safety_black"
                android:textSize="15sp" />

            <TextView
                android:id="@id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_my_account"
                android:layout_below="@id/tv_my_account"
                android:textColor="@color/safety_text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="1px"
            layout="@layout/divider" >
        </include>

        <ScrollView
            android:id="@id/sv_setting_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="1dp" >

                    <ImageView
                        android:id="@id/iv_setting_image"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/safety_right_menu_setting" />

                    <TextView
                        android:id="@id/tv_setting"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"
                        android:text="@string/safety_right_menu_setting"
                        android:textColor="@color/safety_black"
                        android:textSize="15sp" />
                </LinearLayout>

                <include
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    layout="@layout/divider" >
                </include>

                <!-- android:background="@drawable/selector_right_menu_item" -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="1dp" >

                    <ImageView
                        android:id="@id/iv_check_finished_image"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/safety_check_finished_icon" />

                    <TextView
                        android:id="@id/tv_check_finished"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"
                        android:text="@string/safety_right_menu_check_finished"
                        android:textColor="@color/safety_black"
                        android:textSize="15sp" />
                </LinearLayout>

                <include
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    layout="@layout/divider" >
                </include>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="1dp" >

                    <ImageView
                        android:id="@id/iv_check_result_image"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/safety_check_result_icon" />

                    <TextView
                        android:id="@id/tv_check_result"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"
                        android:text="@string/safety_right_menu_check_result"
                        android:textColor="@color/safety_black"
                        android:textSize="15sp" />
                </LinearLayout>

                <include
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    layout="@layout/divider" >
                </include>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="1dp" >

                    <ImageView
                        android:id="@id/iv_about_image"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/safety_right_menu_about" />

                    <TextView
                        android:id="@id/tv_check_result"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"
                        android:text="@string/safety_right_menu_about"
                        android:textColor="@color/safety_black"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>